idf_component_register(SRCS
                       bigbro.cpp
                       cardcache.cpp
                       connect.cpp
                       console.cpp
                       controller.cpp
                       display.cpp
                       format.cpp
                       http.cpp
                       hw.cpp
                       logger.cpp
                       nvs.cpp
                       reader.cpp
                       slack.cpp
                       sntp.cpp
                       util.cpp
                       EMBED_TXTFILES howsmyssl_com_root_cert.pem
                       INCLUDE_DIRS ".")
