idf_component_register(SRCS
                       bigbro.cpp
                       cardcache.cpp
                       connect.cpp
                       console.cpp
                       controller.cpp
                       display.cpp
                       format.cpp
                       http.cpp
                       hw.cpp
                       logger.cpp
                       nvs.cpp
                       otafwu.cpp
                       reader.cpp
                       slack.cpp
                       sntp.cpp
                       util.cpp
                       INCLUDE_DIRS ".")
